logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-03T100000+0000/task_id=Load_songplays_fact_table/attempt=2.log
[2025-07-24T14:24:03.875+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T10:00:00+00:00 [queued]>
[2025-07-24T14:24:03.882+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T10:00:00+00:00 [queued]>
[2025-07-24T14:24:03.883+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 4
[2025-07-24T14:24:03.895+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 10:00:00+00:00
[2025-07-24T14:24:03.900+0000] {standard_task_runner.py:60} INFO - Started process 630 to run task
[2025-07-24T14:24:03.904+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T10:00:00+00:00', '--job-id', '518', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp2mo1favj']
[2025-07-24T14:24:03.907+0000] {standard_task_runner.py:88} INFO - Job 518: Subtask Load_songplays_fact_table
[2025-07-24T14:24:03.967+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T10:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:24:04.030+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T10:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T10:00:00+00:00'
[2025-07-24T14:24:04.035+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:24:04.045+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T100000, start_date=20250724T142403, end_date=20250724T142404
[2025-07-24T14:24:04.056+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 518 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 630)
[2025-07-24T14:24:04.077+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:24:04.098+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
